--- a/public/css/less/debuggerio.light.less
+++ b/public/css/less/debuggerio.light.less
@@ -6,6 +6,8 @@
 
 * { transition: background 0.2s, border-color 0.2s; }
 
+.nano > .content + .pane > .slider { opacity: 0.75; }
+
 @bg_color: #FCFCFC;
 @output_bg_color: #EEE;
 
