--- a/public/css/less/panels.less
+++ b/public/css/less/panels.less
@@ -2,7 +2,7 @@
  * debugger.io: An interactive web scripting sandbox
  */
 
-@import url('//cdnjs.cloudflare.com/ajax/libs/codemirror/3.16.0/codemirror.min.css');
+@import url('//cdnjs.cloudflare.com/ajax/libs/codemirror/3.19.0/codemirror.min.css');
 
 body.ns, body.ns * { cursor: ns-resize !important; }
 body.ew, body.ew * { cursor: ew-resize !important; }
@@ -50,6 +50,8 @@ body.ew, body.ew * { cursor: ew-resize !important; }
       background: @bg_color;
       font-family: @monospace !important;
       font-size: @mirror_font_size !important;
+
+      .CodeMirror-vscrollbar.nano > .pane { display: block !important; }
     }
   }
 
